Style updates to the feature selection panel- softer corners, and light/dark mode background color / foreground color fixes.

--- a/site/src/FeatureSelector.css
+++ b/site/src/FeatureSelector.css
@@ -4,13 +4,28 @@
   overflow-y: auto;
 }
 
-.theme-dark .maplibregl-popup-content {
-  background-color: #121212;
-  color: #fff;
+.maplibregl-popup-content {
+  border-radius: 6px;
 }
 
+.theme-light .maplibregl-popup-content {
+  background-color: rgba(255, 255, 255, 0.9);
+  color: black;
+}
+
+
+.theme-dark .maplibregl-popup-content {
+  background-color: rgba(0, 0, 0, 0.85);
+  color: white;
+}
+
+.maplibregl-popup-close-button {
+  color: black;
+}
+
+
 .theme-dark .maplibregl-popup-close-button {
-  color: #fff;
+  color: white;
 }
 
 .feature-selector-title {
